--- a/views/base-protected.twig
+++ b/views/base-protected.twig
@@ -5,6 +5,7 @@
 		<meta keywords="K9um Laude">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		{{ function('wp_head') }}
+		<meta name="robots" content="noindex,nofollow">
 	</head>
 	{% if function( 'is_user_logged_in') %}
 		<body id="top" class="detail-body">
