--- a/views/blocks/footer.twig
+++ b/views/blocks/footer.twig
@@ -1,18 +1,18 @@
 <div class="partners">
 	<div class="participation">
 		<p class="text-light">Con la participación de:</p>
-		{{ source(directory ~ '/static/img/svg/logos/sec.svg') }}
-		{{ source(directory ~ '/static/img/svg/logos/sea.svg') }}
-		{{ source(directory ~ '/static/img/svg/logos/semi.svg') }}
-		{{ source(directory ~ '/static/img/svg/logos/seen.svg') }}
-		{{ source(directory ~ '/static/img/svg/logos/sed.svg') }}
-		{{ source(directory ~ '/static/img/svg/logos/sen.svg') }}
+		<a href="https://secardiologia.es" target="_blank">{{ source(directory ~ '/static/img/svg/logos/sec.svg') }}</a>
+		<a href="https://www.se-arteriosclerosis.org" target="_blank">{{ source(directory ~ '/static/img/svg/logos/sea.svg') }}</a>
+		<a href="https://www.fesemi.org" target="_blank">{{ source(directory ~ '/static/img/svg/logos/semi.svg') }}</a>
+		<a href="https://www.seen.es/portal" target="_blank">{{ source(directory ~ '/static/img/svg/logos/seen.svg') }}</a>
+		<a href="https://www.sediabetes.org" target="_blank">{{ source(directory ~ '/static/img/svg/logos/sed.svg') }}</a>
+		<a href="https://www.sen.es" target="_blank">{{ source(directory ~ '/static/img/svg/logos/sen.svg') }}</a>
 	</div>
 	<div class="activity">
 		<p class="text-light bigger-margin">Una actividad de:</p>
-		{{ source(directory ~ '/static/img/svg/logos/ak9demia.svg') }}
-		<p class="text-light bigger-margin-left">Una iniciativa de:</p>
-		{{ source(directory ~ '/static/img/svg/logos/sanofi.svg') }}
+		<a href="https://www.ak9demia.es" target="_blank">{{ source(directory ~ '/static/img/svg/logos/ak9demia.svg') }}</a>
+		<p class="text-light bigger-margin bigger-margin-left">Una iniciativa de:</p>
+		<a href="https://www.sanofi.es" target="_blank">{{ source(directory ~ '/static/img/svg/logos/sanofi.svg') }}</a>
 	</div>
 </div>
 <footer>
