--- a/views/course.twig
+++ b/views/course.twig
@@ -5,7 +5,7 @@
 			<div class="container">
 				<div class="left">
 					<h1 class="heading">{{post.title}}</h1>
-					<p class="text">{{post.custom.description}}</p>
+					<p class="text cm">{{post.custom.description}}</p>
 				</div>
 				<div class="right">
 					<div class="container">
