--- a/views/home.twig
+++ b/views/home.twig
@@ -49,7 +49,8 @@
 		</div>
 	</section>
 	<section id="temario">
-		<h2 class="heading">Programa formativo<br>del curso</h2>
+		<h2 class="heading">Programa formativo<br>
+			del curso</h2>
 		<div class="container">
 			<div class="left">
 				<img src="{{theme.link}}/static/img/mobiles.png" alt="">
@@ -87,6 +88,12 @@
 						<p class="program-chapter">Certificado Participación</p>
 					</div>
 				</div>
+			</div>
+		</section>
+		<section id="banner">
+			<div class="wrapper">
+				<h2>Sume créditos, inscríbase en la anterior edición de “Actualización del abordaje terapéutico del paciente con dislipemia”</h2>
+				<a href="https://primera-edicion.k9umlaude.com" class="button button-l button-white" target="_blank">Acceso</a>
 			</div>
 		</section>
 		<section id="committee">
