--- a/src/scss/_course.scss
+++ b/src/scss/_course.scss
@@ -1,15 +1,21 @@
 #course {
 	ul {
-		@apply ml-3;
+		@apply ml-0 sm:ml-3;
 	}
 	ol {
 		@apply ml-6;
 	}
 	.heading {
-		max-width: 26rem;
+		@apply sm:max-w-md max-w-none text-center sm:text-left;
+	}
+	.cm {
+		@apply text-center sm:text-left;
 	}
 	.container {
-		@apply flex items-baseline;
+		@apply flex items-baseline flex-wrap lg:flex-nowrap;
+	}
+	.right .container {
+		@apply flex-wrap sm:flex-nowrap;
 	}
 	.course-details {
 		li {
@@ -42,9 +48,11 @@
 		}
 		.line-before {
 			&:before {
-				@apply absolute h-32 left-20 mb-8 text-lightblue -top-44 z-10;
-				border-width: 0.05rem;
-				content: "";
+				@apply 2xl:absolute 2xl:h-32 2xl:mb-8 2xl:text-lightblue 2xl:-top-44 2xl:z-10 left-16;
+				@media (min-width: 1620px) {
+					border-width: 0.05rem;
+					content: "";
+				}
 			}
 		}
 	}
@@ -61,7 +69,13 @@
 			@apply border-t-0;
 		}
 		a {
-			@apply bg-white border border-white flex items-center justify-between mb-4 px-12 py-8 rounded-xl;
+			@apply bg-white border border-white flex flex-wrap xl:flex-nowrap items-center justify-between mb-4 px-6 sm:px-12 py-4 sm:py-8 rounded-xl;
+			.left {
+				@apply w-full xl:w-4/6 2xl:w-1/2;
+			}
+			.right {
+				@apply w-full 2xl:w-2/6 xl:w-1/2;
+			}
 			.icon02,
 			.arrow {
 				path {
@@ -112,6 +126,7 @@
 			}
 		}
 		.left {
+			@apply w-full lg:w-1/2 pr-0 lg:pr-8;
 			.subheading {
 				@apply m-0;
 			}
@@ -120,19 +135,30 @@
 			}
 		}
 		.right {
-			@apply flex items-center justify-between pl-8;
+			@apply flex flex-wrap sm:flex-nowrap items-center justify-between pl-0 2xl:pl-8;
 			p {
 				@apply inline-block text-base-sm text-darkblue;
 			}
 			.progress p {
-				@apply w-14;
+				@apply hidden sm:block w-14;
+			}
+			> div {
+				@apply w-full sm:w-auto my-1 sm:my-0;
+				&:first-child,
+				&:last-child {
+					@apply hidden sm:block;
+				}
 			}
 		}
 		.text {
-			@apply ml-4 inline-block;
+			@apply ml-0 sm:ml-4 inline-block;
 		}
 	}
 	.module-variant {
+		a .left,
+		a .right {
+			@apply w-1/2;
+		}
 		.disabled {
 			opacity: 0.75;
 			pointer-events: none;
@@ -142,13 +168,27 @@
 		}
 	}
 	.next-module {
-		@apply pb-16;
+		@apply flex justify-center sm:justify-start pb-16;
 		.text {
 			@apply mb-4;
 		}
 	}
 	.progress {
-		@apply items-center flex;
+		@apply items-center flex justify-start sm:justify-evenly;
+		> div {
+			@media (max-width: 640px) {
+				order: 2;
+				&.line2 {
+					@apply mt-4 sm:mt-0;
+					width: 100% !important;
+				}
+			}
+		}
+		> p {
+			@media (max-width: 640px) {
+				order: 1;
+			}
+		}
 	}
 	.subcontainer {
 		@apply flex flex-col items-center;
@@ -157,6 +197,15 @@
 		@apply mb-6;
 	}
 	.wrapper {
-		@apply max-content p-8 w-full;
+		@apply max-content p-0 md:p-8 w-full;
+	}
+	> .wrapper {
+		@apply max-content xl:p-8 w-full;
+		.left {
+			@apply mx-8 md:mx-0;
+		}
+		.right {
+			@apply mx-8 md:mx-0;
+		}
 	}
 }
