--- a/views/base-protected-with-certificate.twig
+++ b/views/base-protected-with-certificate.twig
@@ -5,6 +5,7 @@
 		<meta keywords="K9um Laude">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		{{ function('wp_head') }}
+		<meta name="robots" content="noindex,nofollow">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 	</head>
 	{% if function( 'is_user_logged_in') %}
