--- a/views/blocks/footer.twig
+++ b/views/blocks/footer.twig
@@ -6,7 +6,7 @@
 		<a href="https://www.fesemi.org" target="_blank">{{ source(directory ~ '/static/img/svg/logos/semi.svg') }}</a>
 		<a href="https://www.seen.es/portal" target="_blank">{{ source(directory ~ '/static/img/svg/logos/seen.svg') }}</a>
 		<a href="https://www.sediabetes.org" target="_blank">{{ source(directory ~ '/static/img/svg/logos/sed.svg') }}</a>
-		<a href="https://www.sen.es" target="_blank">{{ source(directory ~ '/static/img/svg/logos/sen.svg') }}</a>
+		<a href="https://www.senefro.org/modules.php?name=home&lang=ES" target="_blank">{{ source(directory ~ '/static/img/svg/logos/sen.svg') }}</a>
 	</div>
 	<div class="activity">
 		<p class="text-light bigger-margin">Una actividad de:</p>
