--- a/views/home.twig
+++ b/views/home.twig
@@ -99,8 +99,12 @@
 		</section>
 		<section id="banner">
 			<div class="wrapper">
-				<h2>Sume créditos, inscríbase en la anterior edición de “Actualización del abordaje terapéutico del paciente con dislipemia”</h2>
-				<a href="https://primera-edicion.k9umlaude.com" class="button button-xxl button-white" target="_blank">Acceder a la primera edición</a>
+				<img id="first-edition" src="{{theme.link}}/static/img/primera-edicion.png" alt="">
+				<div>
+					<h2>Sume créditos, inscríbase en la anterior edición de
+						<br>“Actualización del abordaje terapéutico del paciente con dislipemia”</h2>
+					<a href="https://primera-edicion.k9umlaude.com" class="button button-xxl button-white" target="_blank">Acceder a la primera edición</a>
+				</div>
 			</div>
 		</section>
 		<section id="committee">
