--- a/views/blocks/footer.twig
+++ b/views/blocks/footer.twig
@@ -11,8 +11,10 @@
 	<div class="activity">
 		<p class="text-light bigger-margin">Una actividad de:</p>
 		<a href="https://www.ak9demia.es" target="_blank">{{ source(directory ~ '/static/img/svg/logos/ak9demia.svg') }}</a>
-		<p class="text-light bigger-margin bigger-margin-left">Una iniciativa de:</p>
+		<p class="text-light bigger-margin bigger-margin-left">Con la colaboración de:</p>
 		<a href="https://www.sanofi.es" target="_blank">{{ source(directory ~ '/static/img/svg/logos/sanofi.svg') }}</a>
+		<p class="text-light bigger-margin bigger-margin-left">Con la secretaría técnica de:</p>
+		<a href="https://medea.es" target="_blank">{{ source(directory ~ '/static/img/svg/logos/medea.svg') }}</a>
 	</div>
 </div>
 <footer>
