--- a/src/scss/_access.scss
+++ b/src/scss/_access.scss
@@ -7,6 +7,10 @@
 		@apply flex;
 	}
 	.wrapper {
-		@apply max-content p-8;
+		@apply max-content py-8;
+		padding: 0 2rem;
+		@media (min-width: 1700px) {
+			padding: 0;
+		}
 	}
 }
