--- a/views/blocks/footer.twig
+++ b/views/blocks/footer.twig
@@ -13,7 +13,7 @@
 		<a href="https://www.ak9demia.es" target="_blank">{{ source(directory ~ '/static/img/svg/logos/ak9demia.svg') }}</a>
 		<p class="text-light bigger-margin bigger-margin-left">Con la colaboración de:</p>
 		<a href="https://www.sanofi.es" target="_blank">{{ source(directory ~ '/static/img/svg/logos/sanofi.svg') }}</a>
-		<p class="text-light bigger-margin bigger-margin-left">Con la secretaría técnica de:</p>
+		<p class="text-light bigger-margin bigger-margin-left">Secretaría técnica:</p>
 		<a href="https://medea.es" target="_blank">{{ source(directory ~ '/static/img/svg/logos/medea.svg') }}</a>
 	</div>
 </div>
@@ -23,10 +23,10 @@
 			{{ now|date('Y') }}
 			Sanofi-aventis, S.A. Todos los derechos reservados</div>
 		<div class="right">
-			<a href="https://www.sanofi.es/es/aviso-legal" target="_blank">Aviso legal</a>
+			<a href="{{site.url}}/aviso-legal" target="_blank">Aviso legal</a>
 			<a href="mailto:secretaria.tecnica@k9umlaude.es?subject=Contacto%20K9um%20laude">Contacto</a>
-			<a href="{{site.url}}/politica-de-cookies" target="_blank">Política de cookies</a>
-			<a href="https://www.sanofi.es/es/politica-de-privacidad" target="_blank" class="noline">Política de privacidad</a>
+			<a href="{{site.url}}/politica-cookies" target="_blank">Política de cookies</a>
+			<a href="{{site.url}}/politica-privacidad" target="_blank" class="noline">Política de privacidad</a>
 		</div>
 	</div>
 </footer>
