--- a/views/register.twig
+++ b/views/register.twig
@@ -138,16 +138,20 @@
 									<div class="right">
 										<div class="checkbox">
 											<input id="accept2" type="checkbox" class="styled-checkbox off">
-											<label for="accept2">
-												He leído y acepto
-												<a href="/politica-privacidad" class="link">el aviso legal y la política de privacidad</a>
+											<label for="accept2" class="long-text">
+												He leído y acepto el
+												<a href="/aviso-legal" class="link">Aviso Legal</a>
+												y la
+												<a href="/politica-privacidad" class="link">política de privacidad</a>
+												de MEDEA, Medical Education Agency, S.L.
 												<sup>*</sup>
 											</label>
 										</div>
 										<div class="checkbox">
 											<input id="accept3" type="checkbox" class="styled-checkbox off">
 											<label for="accept3" class="long-text">
-												Acepto a que Sanofi-Aventis S.A (“Sanofi”) trate mis datos personales facilitados para gestionar las relaciones promocionales conmigo, llevar a cabo segmentación profesional para entender mejor mis intereses y ofrecerme contenido personalizado, y para fines estadísticos, históricos o científicos. Puede usted ajustar de forma individual cada una de las finalidades anteriores. Ver en detalle.
+												Acepto a que Sanofi-Aventis S.A (“Sanofi”) trate mis datos personales facilitados para gestionar las relaciones promocionales conmigo, llevar a cabo segmentación profesional para entender mejor mis intereses y ofrecerme contenido personalizado, y para fines estadísticos, históricos o científicos. Puede usted ajustar de forma individual cada una de las finalidades anteriores.
+												<a href="/politica-privacidad-sanofi" class="link">Ver en detalle</a>.
 											</label>
 										</div>
 										<br>
