SEEN out and changes in register cases

--- a/views/register.twig
+++ b/views/register.twig
@@ -102,13 +102,12 @@
 										{% include "fragments/select-medicalsociety.twig" %}
 									</div>
 									<div class="right">
-										<p class="text selectgroup-title">Número de colegiado</p>
 										{% include "fragments/select-collegenumber1.twig" %}
 										{% include "fragments/select-collegenumber2.twig" %}
-										<div class="field">
-											<label for="correlativenum" class="text">Número correlativo asignado<sup>*</sup>
+										<div>
+											<label for="correlativenum" class="text">Número de colegiado<sup>*</sup>
 											</label>
-											<input id="correlativenum" type="number" class="box" placeholder="Número correlativo" tabindex="-1">
+											<input id="correlativenum" type="number" class="box" placeholder="Número de colegiado" tabindex="-1">
 											<p class="error">Número requerido</p>
 											<p class="error2">Formato incorrecto</p>
 										</div>
