Admin table reorder, added two more info sections

--- a/views/login.twig
+++ b/views/login.twig
@@ -17,7 +17,7 @@
 							<label for="pass" class="text">Contraseña</label>
 							<div class="input-wrap">
 								<input id="pass" type="password" name="pwd" class="box" placeholder="Contraseña">
-								<a href="#" class="forgot link" tabindex="0">Olvidé mi contraseña</a>
+								<a href="{{site.url}}/wp-login.php?action=lostpassword" class="forgot link" tabindex="0">Olvidé mi contraseña</a>
 							</div>
 						</div>
 						<div class="checkbox">
