--- a/src/admin/admin-styles.scss
+++ b/src/admin/admin-styles.scss
@@ -35,6 +35,22 @@
 		margin: 2rem 0;
 	}
 }
+#admin-info {
+	.form-field {
+		align-items: center;
+		display: flex;
+		input {
+			margin: 0;
+			margin-right: 0.25rem;
+		}
+		label {
+			font-size: 0.85rem;
+		}
+	}
+	.off {
+		display: none;
+	}
+}
 .highlight {
 	background: #ffeeee;
 }
